# storylab-backend

./: .env  .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0c1f90e75094_add_treatment_to_projects.py  56a98863d19a_init_schema.py  6e5f66eedef6_add_synopsis_to_projects.py  731651cbf334_add_treatment_to_projects.py  8b7dcbec2d5b_add_treatment_to_projects.py  aae5779358b8_init_schema.py  b693b67d3b9a_move_synopsis_treatment_to_screenplays.py  d2a1b8e4432b_add_treatment_to_projects.py
app/: main.py  settings.py  turning_points.py
app/ai/: prompts.py  router.py
app/ai/tests/: test_synopsis_treatment.py  test_turning_points.py
app/auth/: router.py  security.py
app/db/: database.py  models.py
app/media/: router.py
app/projects/: router.py
app/screenplays/: router.py
app/utils/: ollama_client.py
scripts/: demo_treatment_persistence.py  healthcheck.sh  pull_models.sh
tests/: test_treatment_persistence.py
